--- a/.htaccess
+++ b/.htaccess
@@ -91,7 +91,7 @@ Options All -Indexes
     RewriteEngine on
     #VideoHLS for DRM
 
-    RewriteRule    ^buy/?  plugin/Layout/buy.php [NC,L,QSA]
+    RewriteRule    ^buy/?  plugin/YPTWallet/buy.php [NC,L,QSA]
     RewriteRule    ^id/?  view/id.php [NC,L,QSA]
     RewriteRule    ^logo.png  view/logo.png.php [NC,L,QSA]
 
