--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@
 /plugin/FansSubscriptions/
 /plugin/MessageOfTheDay/
 /plugin/InteractiveVideo/
+/plugin/AI/
 getPaidPlugisList.php
 /videos/
 *.zip
